@@ -1,8 +1,9 @@
 gnome-desktop (2.18.0-2) UNRELEASED; urgency=low
 
   * Upload to unstable; drop check-dist include.
+  * Wrap build-deps and deps.
 
- -- Loic Minier <lool@dooz.org>  Sat, 14 Apr 2007 15:38:17 +0200
+ -- Loic Minier <lool@dooz.org>  Sat, 14 Apr 2007 15:40:52 +0200
 
 gnome-desktop (2.18.0-1) experimental; urgency=low
 
